# Navit-daemon

./: .flake8  .gitignore  BUILD.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/navit/daemon/client/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
fuzz/: FUZZ.md  FUZZ_REPORT.md  fuzz_calibration.py  fuzz_calibration_api.py  fuzz_nmea.py  fuzz_remote_parse.py
fuzz/corpus/calibration/: partial.json  valid.json
fuzz/corpus/calibration_api/: calibrate_gyro.json  get_calibration.json  set_all.json  set_gyro.json
fuzz/corpus/nmea/: basic.json  edge_coords.json  with_time.json
fuzz/corpus/remote_parse/: combined.json  gps_only.json  imu_only.json  imu_with_mag.json  minimal_gps.json  numeric_strings.json
ios/NavitDaemonClient/: ContentView.swift  Info.plist  NavitDaemonClientApp.swift
ios/NavitDaemonClient.xcodeproj/: project.pbxproj
navit_daemon/: __init__.py  __main__.py  calibration.py  calibration_api.py  config.py  fusion_ahrs.py  gps_reader.py  iio_reader.py  main.py  nmea.py  output_server.py
navit_daemon/sources/: __init__.py  base.py  calibrated.py  linux.py  remote.py
tests/: __init__.py  test_calibration.py  test_calibration_api.py  test_config.py  test_fusion_ahrs.py  test_iio_reader.py  test_nmea.py  test_sources_calibrated.py  test_sources_remote.py
